docker/kubernetes/chatterbox-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatterbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatterbox
  template:
    metadata:
      labels:
        app: chatterbox
        app_group: ia
    spec:
      runtimeClassName: nvidia
      containers:
      - name: chatterbox
        image: localhost:32000/daimler/chatterbox-tts:latest
        ports:
        - containerPort: 4123
        volumeMounts:
        - name: chatterbox-voice-samples
          mountPath: /app/voice-samples
        - name: chatterbox-voices
          mountPath: /voices
        - name: chatterbox-cache
          mountPath: /cache
        - name: chatterbox-data
          mountPath: /data
      volumes:
      - name: chatterbox-voice-samples
        hostPath:
          path: /home/ollama/chatterbox/samples/
          type: DirectoryOrCreate
      - name: chatterbox-voices
        hostPath:
          path: /home/ollama/chatterbox/voices/
          type: DirectoryOrCreate
      - name: chatterbox-cache
        hostPath:
          path: /home/ollama/chatterbox/cache/
          type: DirectoryOrCreate
      - name: chatterbox-data
        hostPath:
          path: /home/ollama/chatterbox/data/
          type: DirectoryOrCreate
