docker/kubernetes/comfyui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      labels:
        app: comfyui
        app_group: ia
    spec:
      containers:
      - name: comfyui
        image: localhost:32000/daimler/comfyui:0.3.75
        ports:
        - containerPort: 8188
        resources:
          limits:
            memory: 22Gi
        volumeMounts:
        - name: models-volume
          mountPath: /app/ComfyUI/models
        - name: output-volume
          mountPath: /app/ComfyUI/output
        - name: settings-volume
          mountPath: /app/ComfyUI/user/default
        - name: flows-volume
          mountPath: /app/ComfyUI/user/default/workflows
      volumes:
      - name: models-volume
        hostPath:
          path: /home/ollama/confyui/models
      - name: output-volume
        hostPath:
          path: /home/ollama/confyui/output
      - name: settings-volume
        hostPath:
          path: /home/ollama/confyui/settings
      - name: flows-volume
        hostPath:
          path: /home/ollama/confyui/flows
      runtimeClassName: nvidia
