docker/kubernetes/openwebui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
        app_group: ia
    spec:
      containers:
      - name: openwebui
        image: localhost:32000/daimler/openwebui:0.6.40
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: openwebui-data
          mountPath: "/app/backend/data"
      volumes:
      - name: openwebui-data
        hostPath:
          path: "/home/ollama/openwebui_data/"
          type: DirectoryOrCreate
