docker/kubernetes/tts-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tts
  template:
    metadata:
      labels:
        app: tts
        app_group: ia
    spec:
      containers:
      - name: tts
        image: localhost:32000/daimler/openai-edge-tts:1.0.1
        ports:
        - containerPort: 5050
