docker/kubernetes/chatterbox-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatterbox-svc
spec:
  selector:
    app: chatterbox
  type: NodePort
  ports:
    - protocol: TCP
      port: 4123
      targetPort: 4123
      nodePort: 30123
