docker/kubernetes/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      runtimeClassName: nvidia
      containers:
      - name: ollama
        image: ollama/ollama:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 11434
        # resources:
        #   limits:
        #     nvidia.com/gpu: 1  
        resources:
          limits:
            memory: 22Gi
        volumeMounts:
        - name: ollama-ssh-private
          mountPath: /root/.ollama/id_ed25519
          readOnly: true
        - name: ollama-ssh-public
          mountPath: /root/.ollama/id_ed25519.pub
          readOnly: true
        - name: host-home
          mountPath: /home
      volumes:
      - name: ollama-ssh-private
        hostPath:
          path: /home/ollama/ssh/id_ed25519
          type: File
      - name: ollama-ssh-public
        hostPath:
          path: /home/ollama/ssh/id_ed25519.pub
          type: File
      - name: host-home
        hostPath:
          path: /home
          type: Directory

# kubectl create secret generic ollama-secret --from-literal=api-key="your-api-key"
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-svc
spec:
  selector:
    app: ollama
  type: NodePort
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
      nodePort: 31434
