docker/kubernetes/openwebui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-svc
spec:
  selector:
    app: openwebui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
