docker/kubernetes/tts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tts-svc
spec:
  selector:
    app: tts
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
  type: NodePort
