docker/kubernetes/comfyui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      labels:
        app: comfyui
        app_group: ia
    spec:
      runtimeClassName: nvidia
      containers:
      - name: comfyui
        image: localhost:32000/daimler/comfyui:0.3.75
        # jamesbrink/comfyui
        ports:
        - containerPort: 8188
        resources:
          limits:
            memory: 22Gi
        volumeMounts:
        - name: models-volume
          mountPath: /app/ComfyUI/models
        - name: output-volume
          mountPath: /app/ComfyUI/output
        - name: settings-volume
          mountPath: /app/ComfyUI/user/default
        - name: flows-volume
          mountPath: /app/ComfyUI/user/default/workflows
      volumes:
      - name: models-volume
        hostPath:
          path: /home/ollama/confyui/models
      - name: output-volume
        hostPath:
          path: /home/ollama/confyui/output
      - name: settings-volume
        hostPath:
          path: /home/ollama/confyui/settings
      - name: flows-volume
        hostPath:
          path: /home/ollama/confyui/flows
---
apiVersion: v1
kind: Service
metadata:
  name: comfyui-svc
spec:
  selector:
    app: comfyui
  ports:
    - protocol: TCP
      port: 8188
      targetPort: 8188
      nodePort: 30188
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui-ing
spec:
  ingressClassName: public
  rules:
  - host: comfyui.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: comfyui-svc
            port:
              number: 8188
