docker/kubernetes/homeassistant.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
        app_group: ia        
    spec:
      hostNetwork: true
      containers:
      - name: homeassistant
        image: "ghcr.io/home-assistant/home-assistant:stable"
        volumeMounts:
        - name: config
          mountPath: /config
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: dbus
          mountPath: /run/dbus
          readOnly: true
        securityContext:
          privileged: true
      volumes:
      - name: config
        hostPath:
          path: /home/ollama/homeassistant/config
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: dbus
        hostPath:
          path: /run/dbus
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-svc
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
      nodePort: 30023
  type: NodePort

---
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ing
spec:
  ingressClassName: public
  rules:
  - host: homeassistant.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant-svc
            port:
              number: 8123
