docker/kubernetes/tts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tts
  template:
    metadata:
      labels:
        app: tts
        app_group: ia
    spec:
      containers:
      - name: tts
        # image: localhost:32000/daimler/openai-edge-tts:1.0.1
        image: travisvn/openai-edge-tts:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: tts-svc
spec:
  selector:
    app: tts
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tts-ing
spec:
  ingressClassName: public
  rules:
  - host: tts.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tts-svc
            port:
              number: 5050
